# 2023-waypoint-server

./: README.md
waypoint_server/: package.xml  setup.cfg  setup.py
waypoint_server/launch/: waypoint_server_launch.xml
waypoint_server/test/: client.py  test_waypoint_server.py
waypoint_server/waypoint_server/: server.py  waypoint.py
waypoint_server_interfaces/: CMakeLists.txt  package.xml
waypoint_server_interfaces/msg/: Waypoint.msg
waypoint_server_interfaces/srv/: CreateWaypoint.srv  EditWaypoint.srv  MoveWaypoint.srv
