<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waypoint_server</name>
  <version>0.0.0</version>
  <description>
    Waypoint server stores waypoints and provides services to interact with them.
    It also publishes the current waypoint that the rover must navigate to autonomously.
  </description>
  <maintainer email="northeasternmarsrover@gmail.com">Northeastern University Mars Rover Team</maintainer>
  <license>Proprietary</license>

  <depend>rclpy</depend>
  <depend>geodesy</depend>
  <depend>tf2_ros</depend>
  <depend>sqlite3</depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_mypy</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
